# Whisk

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  engine_defs.lua  imgui.ini
cmake/: settings.cmake
editor/: CMakeLists.txt
editor/include/: helper.h
editor/src/: editors.cpp  greeter.cpp  overview.cpp  runtime.cpp  showgui.cpp
include/: RTscene.h  editors.h  greeter.h  helper.h
player/: CMakeLists.txt
projects/Thing/: Thing.prj
projects/Thing/meshes/: table.sff  test.sff
projects/Thing/models/: quad_tex.sff
projects/Thing/scenes/: Main.scene  Show.scene  light.scene
projects/Thing/scripts/: cube.lua  player.lua
projects/Thing/shaders/: basic.glsl  textured.glsl
projects/Vid/: Vid.prj
projects/Vid/meshes/: Chair.sff  Table.sff  Teacher.sff
projects/Vid/scenes/: ClassRoom.scene
projects/Vid/scripts/: camera.lua  character.lua  sprite.lua
projects/Vid/shaders/: basic.glsl  character.glsl
res/essentials/shaders/: basic.glsl
res/scripts/: editorcam.lua
src/: RTscene.cpp  editors.cpp  greeter.cpp  helper.cpp  main.cpp  overview.cpp  runtime.cpp  showgui.cpp
